1. Sitemap Address Added 2. Blog Alignment Issues Resolved 3. Careers Pages Image & Color Changed
Update & Upgrade skit_webiste_menu, skit_blog

--- a/skit_website/skit_blog/static/src/css/blog_style.css
+++ b/skit_website/skit_blog/static/src/css/blog_style.css
@@ -51,7 +51,7 @@
 	background: #fff;
 	margin-bottom: 2rem;
 	height: calc(50% - 50px - 2px); /* width less margin less border*/
-	height: auto; /*Should be removed. Only for demonstration*/
+	height: 40em; /*Should be removed. Only for demonstration*/
 	margin-left: 1.5%;
 	margin-right: 1.5%;
 	color: black !important;
@@ -61,9 +61,22 @@
 	margin-top: -9%;
 }
 
-/* .column_view:nth-child(n/2) {
-  background: red;
-} */
+.column_view:nth-child(5) {
+	margin-top: -9%;
+}
+
+.column_view:nth-child(8) {
+	margin-top: -9%;
+}
+
+.column_view:nth-child(11) {
+	margin-top: -9%;
+}
+
+.column_view:nth-child(14) {
+	margin-top: -9%;
+}
+
 .article-card__author-img {
 	background-size: cover;
 	background-position: center;
@@ -95,7 +108,7 @@ margin-bottom: 2rem;
 }
 
 .column_view:nth-child(5n):nth-child(odd), .column_view:nth-child(8n),
-	.column_view:nth-child(11n) {
+	.column_view:nth-child(11n), .column_view:nth-child(14n), {
 	/* /background: red; */
 	margin-top: -9%
 }
@@ -199,7 +212,7 @@ margin-bottom: 2rem;
 
 @media ( min-width : 1600px) {
 	.blog-card__category {
-		margin-bottom: 5rem;
+		margin-bottom: 1rem;
 	}
 }
 
