--- a/skit_website/skit_website_menu/static/src/scss/careers.scss
+++ b/skit_website/skit_website_menu/static/src/scss/careers.scss
@@ -33,7 +33,7 @@
 	width: 50%;
 	float: left;
 	height: 50em;
-	background-color: #1c3297;
+	background-color: #8f4ddf;
 }
 
 .sks-sec2-contact-div4 {
@@ -112,7 +112,7 @@ input.sks-career-form {
 .btn-next {
 	margin: 10px;
 	border-radius: 20px;
-	background-color: #223198;
+	background-color: transparent;
 	color: #f5f5f5 !important;
 	font-size: 16px;
 	width: 155px;
@@ -121,7 +121,7 @@ input.sks-career-form {
 
 .btn-next:hover {
 	background-color: #fff;
-	color: #223198 !important;
+	color: #8f4ddf !important;
 }
 
 #one {
